Update CombinedAnalysis.java